disable snap parrallel

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,6 +11,7 @@
   parts:
     v4l2onvif:
       plugin: make
+      disable-parallel: true
       source: .
       source-type: git
       build-packages:
