try to fix snap

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -30,7 +30,7 @@
       - libssl1.0.0
 
   apps:
-    v4l2onvif:
+    onvif-server.exe:
       command: onvif-server.exe 
       daemon: simple
       plugs: [network-bind]
