--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -30,9 +30,11 @@
       - libssl1.0.0
 
   apps:
-    v4l2onvif:
+    server:
       command: onvif-server.exe 
       daemon: simple
       plugs: [network-bind]
 
+    client:
+      command: onvif-client.exe 
 
