--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -10,14 +10,15 @@ ARG CROSSCOMPILER=https://sourceforge.net/projects/raspberry-pi-cross-compilers/
 WORKDIR /v4l2onvif
 COPY . /v4l2onvif
 
-RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates git wget make gsoap \
+RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates git wget make cmake gsoap \
         # cross-compiler \
         && wget -qO- ${CROSSCOMPILER} | tar xz -C /opt \
         && export PATH=$(ls -d /opt/cross-pi-gcc-*/bin):$PATH \
-	&& export CXX=arm-linux-gnueabihf-g++ AR=arm-linux-gnueabihf-ar \
         # openssl \
         && wget -qO- https://www.openssl.org/source/openssl-1.1.1g.tar.gz | tar xz \
         && cd openssl* && ./Configure linux-armv4 --cross-compile-prefix=arm-linux-gnueabihf- no-shared --prefix=$(arm-linux-gnueabihf-gcc -print-sysroot)/usr && make && make install && cd .. \
+        # build \
+	&& export CXX=arm-linux-gnueabihf-g++ AR=arm-linux-gnueabihf-ar \
         && make \
         && make install \
         && apt-get clean && rm -rf /var/lib/apt/lists/
@@ -26,7 +27,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates
 FROM $IMAGE
 
 WORKDIR /app
-COPY --from=builder /usr/local/bin/ /app/
+COPY --from=builder /usr/bin/ /app/
 
 EXPOSE 8080
 
