--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
-dist: trusty
+dist: bionic
 before_install:
 - sudo apt-get install -y gsoap libgsoap-dev
 language: cpp
 compiler:
 - gcc
 script:
-- make || make
+- make
 
