--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -42,4 +42,6 @@ publish_docker_builder:
     export TAG=${CIRRUS_TAG:-latest}
     docker login --username=$DOCKERHUB_USER --password=$DOCKERHUB_PASS 
     docker manifest create --amend $CIRRUS_REPO_FULL_NAME:${TAG} $CIRRUS_REPO_FULL_NAME:${TAG}-amd64 $CIRRUS_REPO_FULL_NAME:${TAG}-armv7 $CIRRUS_REPO_FULL_NAME:${TAG}-armv6
+    docker manifest annotate $CIRRUS_REPO_FULL_NAME:${TAG} $CIRRUS_REPO_FULL_NAME:${TAG}-armv7 --os linux --arch arm --variant v7
+    docker manifest annotate $CIRRUS_REPO_FULL_NAME:${TAG} $CIRRUS_REPO_FULL_NAME:${TAG}-armv6 --os linux --arch arm --variant v6l
     docker manifest push $CIRRUS_REPO_FULL_NAME:${TAG} -p
