update snap build

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -16,7 +16,7 @@
       source: .
       source-type: git
       build-packages:
-      - build-essential
+      - gcc-c++
       - gcc
       - g++
       - make
