--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -12,7 +12,7 @@ COPY . /v4l2onvif
 
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates git wget g++ make cmake zlib1g-dev libssl-dev autoconf automake flex bison busybox \
         # gsoap native \
-        && wget -qO- https://sourceforge.net/projects/gsoap2/files/gsoap-2.8/gsoap_2.8.112.zip | busybox unzip - \
+        && wget --content-disposition -qO- https://sourceforge.net/projects/gsoap2/files/gsoap-2.8/latest | busybox unzip - \
         && cd gsoap* && autoreconf -i && ./configure --prefix=/usr && make install CXXFLAGS="-fpermissive" && make clean && cd .. \
         # cross-compiler \
         && echo "CROSSCOMPILER=${CROSSCOMPILER}" \
