--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -27,8 +27,8 @@
       - libssl-dev
       - zlib1g-dev
       stage-packages:
-      - libssl1.*
-      - libgsoap-2.*
+      - libssl1.1
+      - libgsoap-2.8
 
   apps:
     server:
