--- a/Dockerfile.rpi
+++ b/Dockerfile.rpi
@@ -12,8 +12,8 @@ COPY . /v4l2onvif
 
 RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates git wget g++ make cmake zlib1g-dev libssl-dev autoconf automake flex bison busybox \
         # gsoap native \
-        && wget -qO- https://sourceforge.net/projects/gsoap2/files/gsoap_2.8.112.zip | busybox unzip - \
-        && cd gsoap* && autoreconf -i && ./configure --prefix=/usr && make install CXXFLAGS="-fpermissive" && make clean && cd .. \
+        && wget -qO- https://sourceforge.net/projects/gsoap2/files/gsoap_2.8.116.zip | busybox unzip - \
+        && cd gsoap* && autoreconf -i && ./configure --prefix=/usr && make install && make clean && cd .. \
         # cross-compiler \
         && echo "CROSSCOMPILER=${CROSSCOMPILER}" \
         && wget -qO- ${CROSSCOMPILER} | tar xz -C /opt \
