--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -34,7 +34,7 @@
     server:
       command: onvif-server.exe -H "$(snapctl get http-port)" -P "$(snapctl get rtsp-port)" -i "$(snapctl get devices)"
       daemon: simple
-      plugs: [network-bind, media-control]
+      plugs: [network-bind, camera]
 
     client:
       command: onvif-client.exe 
