try to build without parrallel

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,7 +12,7 @@
   parts:
     v4l2onvif:
       plugin: make
-      disable-parallel: true
+      make-parameters: -j1
       source: .
       source-type: git
       build-packages:
