--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -12,7 +12,7 @@
   parts:
     v4l2onvif:
       plugin: make
-      make-parameters: -j1
+      make-parameters: ["-j1"]
       source: .
       source-type: git
       build-packages:
