--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,7 +13,9 @@ jobs:
       
     steps:
     - uses: actions/checkout@v4
-    - run: git fetch --prune --unshallow --tags
+    - run: |
+        git fetch --prune --unshallow --tags
+        git submodule update --init --recursive
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
